[tool.poetry]
name = "sac-ur5e"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stable-baselines3 = "^2.3.0"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
mujoco = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
